--- a/style.css
+++ b/style.css
@@ -318,3 +318,46 @@ cursor: pointer;}
     background-size: 134vw;
     margin-bottom: 2vw;
 }
+#logo{
+    position: absolute;
+    width: 11vw;
+    top: 2vw;
+    right: 2vw;
+    user-select: none;
+    -webkit-user-drag: none;
+}
+#score{
+    display: none;
+    position: absolute;
+    background-color: #cbcbcb00;
+    width: 6vw;
+    height: 6vw;
+    flex-direction: column;
+    align-items: center;
+    padding: 1vw;
+    border-radius: 5vw;
+    justify-content: space-evenly;
+    font-size: 1.9vw;
+    font-family: ui-sans-serif;
+    font-weight: 600;
+    top: 11.5vw;
+    left: 6vw;
+    border: 0.05vw solid black;
+    box-shadow: 0px 0px 5vw #d1be5f;
+}
+#score hr{
+    width: 4vw;
+    height: 1vw;
+    background: black;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    border-width: 0.07vw;
+}
+#ans{
+    position: relative;
+    top: 2.5vw;
+}
+#total{
+    position: relative;
+    top: -2vw;
+}
